# CritiQ

./: .gitignore  LICENSE  README.md  config.py  demo.py  pyproject.toml
critiq/: __init__.py  agent.py  evaluator.py  i18n.py  types.py  utils.py  workflow.py
critiq/scripts/: annotation.py  reward_predict.py  reward_predict_vllm.py  train_reward.py
critiq/tasks/: base.py  metatask_pairwise_comparison.py
critiq/utils/: __init__.py  core.py  json_parser.py
